<resources>
    <string name="app_name">Food Delivery</string>

    <string name="title_home">Home</string>
    <string name="title_search">Busca</string>
    <string name="title_cadastro">Cadastro</string>
    <string name="title_profile">Perfil</string>
    <string name="title_cardapio">Cardápio</string>
    <string name="title_pedidos">Pedidos</string>

    <string name="file_preferences">restaurante_preferences</string>
    <string name="orders_preferences">orders_preferences</string>
    <string name="itens_preferences">itens_preferences</string>
    <string name="rest">rest_list</string>


    <string name="restaurantes">Restaurantes</string>
    <string name="logotipo">logotipo</string>
    <string name="logotipo_restaurante">logotipo do restaurante</string>
    <string name="ver_mais">Ver mais</string>
    <string name="ver_todos">Ver todos</string>
    <string name="destaques">Destaques</string>
    <string name="entrega_gratis">Entrega grátis</string>
    <string name="pendentes">Pendentes</string>
    <string name="finalizados">Finalizados</string>
    <string name="subtotal">Subtotal:</string>
    <string name="pedido">Pedido:</string>
    <string name="salvar">Salvar</string>
    <string name="valor_rr">Valor (R$)</string>
    <string name="descricao">Descrição</string>
    <string name="nome_do_item">Nome do item</string>
    <string name="editar">Editar</string>
    <string name="adicionar">Adicionar</string>
    <string name="sigla_real">R$</string>
    <string name="item_do_cardapio">Item do cardápio</string>
    <string name="selecione_a_categoria">Selecione a categoria</string>
    <string name="pesquisar_item">Pesquisar item</string>
    <string name="example_profile_description">Pizzaria e comida caseira com variedade e entrega todos os dias da semana</string>
    <string name="menu">Menu</string>
    <string name="conversas">Conversas</string>
    <string name="example_name">Restaurante Pizza Family</string>
    <string name="configurar_card_pio_do_meu_restaurante">Configurar cardápio do meu restaurante</string>

    <string-array name="itens_array">
        <item>Pizzas salgadas</item>
        <item>Pizzas doces</item>
        <item>Bebidas</item>
    </string-array>
</resources>