<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.bottommenulayout.ui.orders.OrdersFragment"
        android:label="@string/title_pedidos"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.bottommenulayout.ui.foodmenu.FoodMenuFragment"
        android:label="@string/title_cardapio"
        tools:layout="@layout/fragment_foodmenu" />

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.example.bottommenulayout.ui.register.RegisterFragment"
        android:label="@string/title_cadastro"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.bottommenulayout.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>