<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    tools:context=".ui.foodmenu.EditFoodMenuItemActivity">

    <TextView
        android:id="@+id/title_cardapio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:letterSpacing="0.05"
        android:text="@string/editar_item"
        android:textColor="@color/text_black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fieldNome"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:hint="@string/nome_do_item"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/title_cardapio" />

    <EditText
        android:id="@+id/fieldDesc"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:hint="@string/descricao"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/fieldNome" />

    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/fieldDesc" />

    <EditText
        android:id="@+id/fieldValor"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:hint="@string/valor_rr"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/category_spinner" />


    <Button
        android:id="@+id/btnAdicionar"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:text="@string/salvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fieldValor" />


</androidx.constraintlayout.widget.ConstraintLayout>