<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true"
            android:paddingHorizontal="16dp">

            <ImageView
                android:id="@+id/image_logo"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:contentDescription="@string/logotipo"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title_destaques"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/pendentes"
                android:textColor="@color/text_black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:letterSpacing="0.05"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_logo" />

            <Button
                android:id="@+id/button_ver_mais"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ver_todos"
                android:textAllCaps="false"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@id/title_destaques"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/title_destaques" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_pendentes"
                android:layout_width="0dp"
                android:layout_height="288dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:nestedScrollingEnabled="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_destaques"
                tools:itemCount="4"
                tools:listitem="@layout/order_viewholder" />


            <TextView
                android:id="@+id/title_frete_gratis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/finalizados"
                android:textColor="@color/text_black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:letterSpacing="0.05"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recycler_pendentes" />

            <Button
                android:id="@+id/button_ver_mais_frete"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ver_todos"
                android:textAllCaps="false"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@id/title_frete_gratis"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/title_frete_gratis" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_finalizados"
                android:layout_width="0dp"
                android:layout_height="288dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:nestedScrollingEnabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0"
                android:layout_marginBottom="16dp"
                app:layout_constraintTop_toBottomOf="@id/title_frete_gratis"
                tools:itemCount="4"
                tools:listitem="@layout/order_viewholder" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
