<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:orientation="horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_order"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <ImageView
        android:id="@+id/icon"
        android:layout_width="52sp"
        android:layout_height="52sp"
        android:contentDescription="@string/logotipo_restaurante"
        android:src="@drawable/ic_round_receipt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/light_gray" />

        <TextView
            android:id="@+id/label_numero_pedido"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:textColor="@color/text_black"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@id/text_quantidade_itens"
            app:layout_constraintStart_toEndOf="@id/icon"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/pedido" />
    <TextView
        android:id="@+id/text_numero_pedido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/text_black"
        android:textStyle="bold"
        android:layout_marginHorizontal="4dp"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@id/text_quantidade_itens"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/label_numero_pedido"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="#1234" />

    <TextView
        android:id="@+id/text_quantidade_itens"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/text_gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/label_valor"
        app:layout_constraintEnd_toEndOf="@id/text_numero_pedido"
        app:layout_constraintStart_toStartOf="@id/label_numero_pedido"
        app:layout_constraintTop_toBottomOf="@id/label_numero_pedido"
        tools:text="12 itens" />

    <TextView
        android:id="@+id/label_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:textColor="@color/text_gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/text_quantidade_itens"
        app:layout_constraintTop_toBottomOf="@id/text_quantidade_itens"
        android:text="@string/subtotal" />

        <TextView
            android:id="@+id/text_valor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginHorizontal="4dp"
            android:textColor="@color/text_black"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/label_valor"
            app:layout_constraintTop_toBottomOf="@id/text_quantidade_itens"
            tools:text="R$ 10,00" />

    <ImageView
        android:id="@+id/icon_status"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ic_outline_check_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/status_green" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/layout_order"
        android:background="@color/light_gray" />

</androidx.constraintlayout.widget.ConstraintLayout>